--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^1.28.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
